# sanguosha

./: build.sh
src/: CMakeLists.txt  CMakeLists.txt.gtest  CardPile.cpp  main.cpp
src/tests/: CardPileTest.cpp
